--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,8 @@
 
 	<groupId>io.vertx.example</groupId>
 	<artifactId>vertx-sockjs-example</artifactId>
+	<packaging>war</packaging>
+	
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
